fix(Table): button focus is truncated in header with 'truncate'

--- a/packages/components/src/components/Table/styles/table.module.scss
+++ b/packages/components/src/components/Table/styles/table.module.scss
@@ -192,7 +192,7 @@
         }
     }
 
-    &[data-truncate='true'],
+    &[data-truncate='true']:not(:has(button)),
     &[data-truncate='true'] .buttonText {
         white-space: nowrap;
         overflow: hidden;
